Initial conversion to mdx

--- a/posts/expressive-design-systems-and-the-genius-of-90s-nickelodeon.mdx
+++ b/posts/expressive-design-systems-and-the-genius-of-90s-nickelodeon.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Expressive Design Systems and the Genius of 90's Nickelodeon"
 date: '2021-04-26'
-blurb: "Two things that are more related than you might think."
-ogimage: "/post-assets/og-nickelodeon.jpg"
+description: "Two things that are more related than you might think."
+thumbnailUrl: "/post-assets/og-nickelodeon.jpg"
 ---
 
 Two things made an impact on me this week.
