--- a/posts/flags-in-code.mdx
+++ b/posts/flags-in-code.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Flags in Code"
 date: '2021-05-11'
-blurb: "A pet project that has made me appreciate the art of copying."
-ogimage: "/post-assets/og-flag.jpg"
+description: "A pet project that has made me appreciate the art of copying."
+thumbnailUrl: "/post-assets/og-flag.jpg"
 ---
 
 This pet project of mine is a chance to explore my love of flags and give myself little code challenges at the same time.
