--- a/posts/the-five-minute-empathy-exercise.mdx
+++ b/posts/the-five-minute-empathy-exercise.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'The Five Minute Empathy Exercise'
 date: '2021-02-23'
-blurb: "When you don't have the time, budget, or need for a full-on empathy workshop, this five minute exercise can get you in the right headspace to design a good user experience."
-ogimage: "/post-assets/og-empathy.jpg"
+description: "When you don't have the time, budget, or need for a full-on empathy workshop, this five minute exercise can get you in the right headspace to design a good user experience."
+thumbnailUrl: "/post-assets/og-empathy.jpg"
 ---
 
 I was recently asked by a freelance client to help craft an email strategy for both trial users and paid users of their product. To get myself in the right headspace for this task, I took five minutes at the beginning to do an empathy exercise that I found extremely valuable, so I thought it'd be worth sharing.
