Remove unneeded packages and simplify publish date

--- a/posts/expressive-design-systems-and-the-genius-of-90s-nickelodeon.mdx
+++ b/posts/expressive-design-systems-and-the-genius-of-90s-nickelodeon.mdx
@@ -21,7 +21,7 @@ I highly recommend this book to anyone who does—or wants to do—design system
 
 * * * * *
 
-The other thing was a documentary called [*The Orange Years: The Nickelodeon Story*](https://www.hulu.com/movie/the-orange-years-the-nickelodeon-story-05933844-48af-4c75-bb60-7ed497ca4916). It's a fun nostalgia trip for those like me who grew up on *Rugrats*, *Double Dare*, and *Clarissa Explains It All*. But it also gave some insight into the creative genius behind Nickelodeon's epic hot streak in the 90's. They had an insane collection of creative talent, whom they trusted to explore and experiment. They valued authenticity. They talked *to* kids, not down to them.
+The other thing was a documentary called <Link href="https://www.hulu.com/movie/the-orange-years-the-nickelodeon-story-05933844-48af-4c75-bb60-7ed497ca4916">The Orange Years: The Nickelodeon Story</Link>. It's a fun nostalgia trip for those like me who grew up on *Rugrats*, *Double Dare*, and *Clarissa Explains It All*. But it also gave some insight into the creative genius behind Nickelodeon's epic hot streak in the 90's. They had an insane collection of creative talent, whom they trusted to explore and experiment. They valued authenticity. They talked *to* kids, not down to them.
 
 Even their logo had lax usage guidelines: "Don't mess with the wordmark, and use orange" – that's it. Everything else was fair game.
 
