Add attribution to blog image component

--- a/posts/simplify-then-add-lightness.mdx
+++ b/posts/simplify-then-add-lightness.mdx
@@ -13,6 +13,7 @@ alt="The Lotus 25 going around a corner in a 1960s Formula 1 race"
 width="1440"
 height="788"
 caption="The Lotus 25 won 14 World Championship Grand Prix in the 1960s."
+attribution="Bernard Cahier / Getty Images"
 />
 
 I probably first heard this quote years ago, but re-encountered it again this week, and it coincides with some documentation I’m writing for how to write in-app feedback requests for our product at [OfficeSpace Software](https://www.officespacesoftware.com/).
