Beef up portfolio page content

--- a/portfolio/designing-for-good-creative-direction.mdx
+++ b/portfolio/designing-for-good-creative-direction.mdx
@@ -4,8 +4,8 @@ tag: "Creative Direction"
 title: "Designing for Good"
 summary: "As the creative director and front-end developer on this project, I worked with our designer to conceive and build a beautiful experience that tells the story of Baptist Grief Center, whose web presence was previously confined to a single nondescript page on a corporate website."
 outcomes:
+    - "1,000 monthly visitors to new site"
     - "New design-development collaboration processes"
-    - "## monthly visitors to new site"
 ---
 
 ## Early Design and Direction
@@ -19,6 +19,8 @@ src="/portfolio-assets/grief-1"
 width="1280"
 height="720"
 caption="Concept 1"
+autoplay
+loop
 />
 
 <Video
@@ -26,6 +28,8 @@ src="/portfolio-assets/grief-2"
 width="1280"
 height="720"
 caption="Concept 2"
+autoplay
+loop
 />
 
 Both designs incorporate a yellow balloon motif, but the more literal interpretation was the favorite.
