--- a/portfolio/designing-for-scale-design-systems.mdx
+++ b/portfolio/designing-for-scale-design-systems.mdx
@@ -37,6 +37,19 @@ width="443"
 height="190"
 />
 
-Helping it along, of course, requires some politicking. Throughout the process, I’ve learned to sell the importance of design system work by constantly reinforcing its business value: improved dev velocity, more business opportunities opened up with improved accessibility, and a path towards modernizing our entire UI.
+Helping it along, of course, requires some politicking. My approach to selling the importance of a design system is to constantly reinforce its business value to stakeholders: improved dev velocity, more business opportunities opened up with improved accessibility, and a path towards modernizing our entire UI. Often I found some in the organization didn't realize they were stakeholders until I shared the benefits of our investment.
 
-What we now call Mariposa – Spanish for “butterfly” – is entering its adolescence as a design system, as it replaces existing pages, powers important new features, and grows in adoption across the entire organization.
+## Envisioning the Future
+
+One of the benefits of a centralized design system is the flexibility it provides when we want to make design updates across the whole product. Mariposa unlocks "UI 2.0" for OfficeSpace, which would be a completely new, modern, industry-leading design experience. To guide this initiative, I visualized an approach centered around accessibility – a problem area for OSS – with tokens, interactivity, and voice and tone layered around it.
+
+<ImageWithCaption
+src="/portfolio-assets/design-system-layers.jpg"
+alt="An infographic describing the layered approach to UI 2.0 using Mariposa."
+width="1000"
+height="802"
+/>
+
+To spread the vision further, the designers and I created revised versions of our key features using a potential new design language, generating excitement that gives Mariposa even more momentum. (Unfortunately, those mockups are proprietary and can't be shared here.)
+
+Today, Mariposa is entering its adolescence as a design system, as it replaces existing pages, powers important new features, and grows in adoption across the entire organization.
