--- a/portfolio/designing-for-innovation-emerging-technology.mdx
+++ b/portfolio/designing-for-innovation-emerging-technology.mdx
@@ -8,23 +8,31 @@ outcomes:
     - "Fluency in Blender, After Effects, and AR workflows"
 ---
 
-I have to admit that occassionally designing without regard for scope limitations or technical feasibility has always had its place in my process. Design is about solving problems, yes, but sometimes it’s about casting a vision. And casting a vision is critical when it comes to exploring emerging technology or funding early-stage startups.
+## Interaction Design Concepts
 
-## Augmented Reality
+While I'm a firm believer in problem-first design thinking, in due dillegence, in discovery, in process – I also think there's value in high level visualization early on in a project. Design is about solving problems, yes, but sometimes it’s about casting a vision. And casting a vision is critical when it comes to exploring emerging technology or funding early-stage startups.
 
-While the hardware is still bulky and awkward, the core promise of AR – embedding UI into our real-world context – is an idea I find exciting. It’s preferable to the alternative of, to borrow a phrase from Golden Krishna, <a href="https://www.nointerface.com/" target="_blank">slapping an interface on it</a>.
+Concepts like these are born out of simple questions that usually start with "What if?"
 
-My approach is to explore AR applications in areas that are important to me: woodworking, cooking, and gardening. Each concept I’ve developed uses the technology to support and improve existing workflows in innovative ways, without feeling gimmicky or intrusive.
+<Video
+src="/portfolio-assets/gardening-concept"
+width="1280"
+height="960"
+caption="What if you could see how plants would look over time directly in your garden?"
+autoplay
+loop
+/>
 
-<VideoAmbient src="/portfolio-assets/ar-gardening.mp4" />
+<Video
+src="/portfolio-assets/meal-planner-concept"
+width="1280"
+height="960"
+caption="What if your recipe book recommended meals based on the weather, then ordered the ingredients for you?"
+autoplay
+loop
+/>
 
-Bringing these visualizations to life pushed my skills as both a designer and a technologist in general. I borrowed from my experience as a 3D modeler and video editor, learning new workflows that crossed the spectrum of creative and technical software.
-
-<VideoAmbient src="/portfolio-assets/ar-woodworking.mp4" />
-
-At the end of the day, these projects are just mockups. But that doesn’t mean they can’t have an impact. For the viewer, they spark ideas and connections that might otherwise take months to uncover. For me, they provide an opportunity to learn new software like Adobe After Effects and Blender, while also practicing interaction design and animation.
-
-## HLPR
+Creating these concepts trains design muscles. They're about studying what makes certain trends successful and what kinds of interactions we can build around. And they're fun!
 
 In the case of HLPR, the brainchild of local entrepreneur Jarad Bingham, the concept was the product – at least for the first round of funding.
 
@@ -39,3 +47,16 @@ The idea behind HLPR (”helper”) is to provide smartphone users with a cash-f
 The prototype takes the audience through the primary happy path of finding room at a local shelter for the recipient and hailing them a ride. Using Invision Studio, I created a high-fidelity prototype complete with onboarding, animated transitions, and realistic content that wowed in every board room pitch.
 
 For a full run-down of this project, <a href="https://medium.com/user-experience-design-1/designing-a-better-way-to-give-76ffeaf53f89" target="_blank">check out the case study on Medium</a>.
+
+
+## Augmented Reality
+
+While the hardware is still bulky and awkward, the core promise of AR – embedding UI into our real-world context – is an idea I find promising. It’s preferable to the alternative of, to borrow a phrase from Golden Krishna, <a href="https://www.nointerface.com/" target="_blank">slapping an interface on it</a>.
+
+My approach to learning AR is to explore applications in areas that are important to me, like woodworking. How can UI embedded in my environment support and improve my workflows? How can it be innovative without feeling gimmicky and intrusive?
+
+<VideoAmbient src="/portfolio-assets/ar-woodworking.mp4" />
+
+While the video above is just a mockup, the skills learned in creating it are very real: 3D modeling, tracking, video editing – all skillsets that I've developed in service of becoming a better designer and more well-rounded technologist.
+
+To make projects like this real, I've begun studying Apple's ARKit resources, learning new software and workflows, and working with developers to continue to expand my skillset.
