--- a/portfolio/designing-for-good-creative-direction.mdx
+++ b/portfolio/designing-for-good-creative-direction.mdx
@@ -4,8 +4,8 @@ tag: "Creative Direction"
 title: "Designing for Good"
 summary: "As the creative director and front-end developer on this project, I worked with our designer to conceive and build a beautiful experience that tells the story of Baptist Grief Center, whose web presence was previously confined to a single nondescript page on a corporate website."
 outcomes:
-    - "1,000 monthly visitors to new site"
-    - "New design-development collaboration processes"
+    - "1,000+ monthly visitors to new site"
+    - "Improved design-development collaboration processes"
 ---
 
 ## Early Design and Direction
