--- a/casestudies/designing-for-emerging-technology.mdx
+++ b/casestudies/designing-for-emerging-technology.mdx
@@ -37,5 +37,5 @@ video
 alt=""
 >
 ## 3D Woodworking Assistant
-For my woodworking projects, I often start with a 3D model in Blender, but it can be burdensome to go back and forth to my computer to consult the plans. Being able to see and manipulate them in 3D, even visualizing each cut on the stock I have in front of me, would be – let’s be honest here – super cool.
+What if you could see your woodworking project plans in 3D? As a hobbyist woodworker, I often start with a 3D model in Blender, but it can be burdensome to go back and forth to my computer to check the order of operations. Being able to see and manipulate the final product in 3D, even visualizing each cut on the stock I have in front of me, would be – let’s be honest here – super cool.
 </CaseStudyChapter>
