--- a/casestudies/designing-for-good.mdx
+++ b/casestudies/designing-for-good.mdx
@@ -2,7 +2,7 @@
 order: 2
 tag: "Prototyping"
 title: "Designing for Good"
-summary: "How do you make the experience of giving money, food, or aid to a stranger a more effective experience for everyone involved? Simple Focus client Jarad Bingham, who had worked with Memphis’ unhoused population for years, wanted us to help him solve that problem."
+summary: "How do you make the experience of giving money, food, or aid to a stranger a more effective experience for everyone involved? A Simple Focus client who had worked with Memphis’ unhoused population for years asked us to help him solve that problem."
 hero: "/portfolio-assets/hlpr-hero.jpg"
 thumbnail: "/portfolio-assets/hlpr-thumbnail.jpg"
 ---
