--- a/casestudies/designing-for-emerging-technology.mdx
+++ b/casestudies/designing-for-emerging-technology.mdx
@@ -5,6 +5,7 @@ title: "Designing for Emerging Technology"
 summary: "Through a series of self-initiated projects, I’ve explored the future of UI beyond the screen, while learning AR, 3D modeling, and interaction design skills."
 hero: "/portfolio-assets/innovation-hero.jpg"
 thumbnail: "/portfolio-assets/innovation-thumbnail.jpg"
+og: "/portfolio-assets/innovation-og.jpg"
 ---
 
 <div className="max-w-2xl mb-24">
