Add case study and update related components

--- a/casestudies/designing-for-emerging-technology.mdx
+++ b/casestudies/designing-for-emerging-technology.mdx
@@ -6,6 +6,7 @@ summary: "Through a series of self-initiated projects, I’ve explored the futur
 hero: "/portfolio-assets/innovation-hero.jpg"
 thumbnail: "/portfolio-assets/innovation-thumbnail.jpg"
 og: "/portfolio-assets/innovation-og.jpg"
+unlisted: false
 ---
 
 <div className="max-w-2xl mb-24">
