--- a/casestudies/designing-for-good.mdx
+++ b/casestudies/designing-for-good.mdx
@@ -6,6 +6,7 @@ summary: "How do you make the experience of giving money, food, or aid to a stra
 hero: "/portfolio-assets/hlpr-hero.jpg"
 thumbnail: "/portfolio-assets/hlpr-thumbnail.jpg"
 og: "/portfolio-assets/hlpr-og.jpg"
+unlisted: false
 ---
 
 <CaseStudyProblemStatement>
