--- a/casestudies/designing-for-scale.mdx
+++ b/casestudies/designing-for-scale.mdx
@@ -6,6 +6,7 @@ summary: "In my first year at OfficeSpace Software, I led multiple designers and
 hero: "/portfolio-assets/design-systems-hero.png"
 thumbnail: "/portfolio-assets/design-systems-thumbnail.jpg"
 og: "/portfolio-assets/design-systems-og.jpg"
+unlisted: false
 ---
 
 <CaseStudyProblemStatement>
