--- a/casestudies/room-booking-overview.mdx
+++ b/casestudies/room-booking-overview.mdx
@@ -71,5 +71,5 @@ All that meant that the build process was done in less than a quarter, with a mi
     quotation="Ding ding ding!"
     citation="The exact reaction of one of our clients upon seeing the alpha version of this feature for the first time."/>
 
-We expected this feature to find a dedicated niche in our client base, and it did. Room Booking Overview was launched as an add-on purchase with an attach rate 25%, exceeding our expectations and immediately driving revenue growth. Since launch, we’ve shipped additional follow-up improvements based on our initial user research, creating a small but ardent set of users whose return rate signals just how well we hit the mark.
+We expected this feature to find a dedicated niche in our client base, and it did. Room Booking Overview was launched as an add-on purchase with an attach rate of 25%, exceeding our expectations and immediately driving revenue growth. Since launch, we’ve shipped additional follow-up improvements based on our initial user research, creating a small but ardent set of users whose return rate signals just how well we hit the mark.
 </div>
