Add related case study module

--- a/casestudies/designing-for-scale.mdx
+++ b/casestudies/designing-for-scale.mdx
@@ -7,6 +7,7 @@ hero: "/portfolio-assets/design-systems-hero.png"
 thumbnail: "/portfolio-assets/design-systems-thumbnail.jpg"
 og: "/portfolio-assets/design-systems-og.jpg"
 unlisted: false
+related: "Room Booking Overview"
 ---
 
 <CaseStudyProblemStatement>
