--- a/casestudies/designing-for-good.mdx
+++ b/casestudies/designing-for-good.mdx
@@ -43,6 +43,7 @@ In this case, the job of the design was to make the idea feel as real as possibl
 src="/portfolio-assets/hlpr-4.mp4"
 video
 alt=""
+layout="vertical"
 >
 ## Prototyping the Final Product
 Finally, I used advanced prototyping tools to create animations, transitions, and interaction design details that helped make the product our client was presenting feel like a fully-formed idea. The prototype wowed in every pitch meeting, and has already begun driving investment in the startup.
