--- a/casestudies/designing-for-good.mdx
+++ b/casestudies/designing-for-good.mdx
@@ -7,6 +7,7 @@ hero: "/portfolio-assets/hlpr-hero.jpg"
 thumbnail: "/portfolio-assets/hlpr-thumbnail.jpg"
 og: "/portfolio-assets/hlpr-og.jpg"
 unlisted: false
+related: "Smart Dog Collar UI"
 ---
 
 <CaseStudyProblemStatement>
