Wording tweaks and better crosslinking

--- a/casestudies/smart-dog-collar.mdx
+++ b/casestudies/smart-dog-collar.mdx
@@ -7,10 +7,11 @@ hero: "/portfolio-assets/smart-collar-hero.jpg"
 thumbnail: ""
 og: "/portfolio-assets/smart-collar-og.jpg"
 unlisted: true
+related: "Designing for Emerging Technology"
 ---
 
 <CaseStudyProblemStatement>
-## Dogs bark. And when they bark for hours at a time when you’re away from home, you need to know about it.
+## Dogs bark. And when they bark for hours at a time while you’re away from home, you need to know.
 
 The product was straightforward—a corrective collar that delivers a tone or small static vibration in response to extended barking—but the UX for the app that controlled it was clouded by questions. I took on the task of creating a UI that was informative and trustworthy, while working with our researcher to ensure that the experience was sensitive to the varied needs of pet parents, as well as pets themselves.
 </CaseStudyProblemStatement>
