--- a/casestudies/room-booking-overview.mdx
+++ b/casestudies/room-booking-overview.mdx
@@ -7,6 +7,7 @@ hero: "/portfolio-assets/rbo-hero.jpg"
 thumbnail: ""
 og: "/portfolio-assets/rbo-og.jpg"
 unlisted: true
+related: "Designing for Good"
 ---
 
 <CaseStudyProblemStatement>
