Update design systems case study

--- a/casestudies/designing-for-scale.mdx
+++ b/casestudies/designing-for-scale.mdx
@@ -45,7 +45,16 @@ To help streamline adoption of the new library, I helped write thorough document
 </CaseStudyChapter>
 
 <CaseStudyChapter
-src="/portfolio-assets/design-systems-4.jpg"
+src="/portfolio-assets/design-systems-4.svg"
+alt="A chart that lays out the principles on which the design system is built."
+layout="vertical"
+>
+## Developing Principles
+Mariposa was created with the long term goal of completely overhauling our UI from the inside out. With that in mind, I created a visual to help everyone on the team understand how the "big idea" of the system is structured. Accessibility and inclusivity are at the core of the experience, and working outward, we layer on our tokens, the interactive layer, and finally the voice and tone in which OfficeSpace communicates to the user.
+</CaseStudyChapter>
+
+<CaseStudyChapter
+src="/portfolio-assets/design-systems-5.jpg"
 alt="A stylized butterfly logo for the Mariposa system."
 >
 ## Encouraging Adoption
