Minor portfolio updates

--- a/casestudies/designing-for-good.mdx
+++ b/casestudies/designing-for-good.mdx
@@ -27,6 +27,7 @@ To sell this vision to investors, non-profit partners, and city leaders, we deci
 <CaseStudyChapter
 src="/portfolio-assets/hlpr-2.jpg"
 alt="A photo of paper wireframes on a desk."
+layout="reverse"
 >
 ## Building Wireframes
 From there, we sketched out every screen that would be needed for the prototype, which gave us an idea of the scope and requirements for each step of the process. To offer food to a stranger, for example, involves all sorts of variables, like allergens, dietary preference, third-party cashiers, corporate partnership, and special menu selections. And the giver could combine multiple forms of aid, multiplying the complexity of each flow.
