--- a/casestudies/designing-for-scale.mdx
+++ b/casestudies/designing-for-scale.mdx
@@ -27,6 +27,7 @@ The first order of business was to create a component library in Figma to power 
 <CaseStudyChapter
 src="/portfolio-assets/design-systems-2.jpg"
 alt="A comparison of the property structure of a component in Figma and in code."
+layout="reverse"
 >
 ## From Figma to Code
 Meanwhile, a new dev team had been formed to build the front-end framework that our design system would utilize. With my background in front-end, I was able to help by writing acceptance criteria, testing each component, even pushing some code changes myself.
@@ -47,6 +48,8 @@ To help streamline adoption of the new library, I helped write thorough document
 <CaseStudyChapter
 src="/portfolio-assets/design-systems-4.svg"
 alt="A chart that lays out the principles on which the design system is built."
+width="900"
+height="600"
 layout="vertical"
 >
 ## Developing Principles
