--- a/casestudies/room-booking-overview.mdx
+++ b/casestudies/room-booking-overview.mdx
@@ -56,6 +56,7 @@ Armed with knowledge and a better idea of the scope of the MVP, I now felt comfo
 src="/portfolio-assets/rbo-4.mp4"
 video
 alt=""
+layout="vertical"
 >
 ## Preparing for a Smooth Handoff
 My core deliverable was a few dozen static screen mockups, but I know better than to think that will be enough for an efficient engineering handoff.
