--- a/casestudies/room-booking-overview.mdx
+++ b/casestudies/room-booking-overview.mdx
@@ -62,7 +62,7 @@ layout="vertical"
 My core deliverable was a few dozen static screen mockups, but I know better than to think that will be enough for an efficient engineering handoff.
 My final Figma file also contained written documentation of our design decisions, links to videos I’d made for certain interactions, and specs for responsiveness, loading states, and screen transitions.
 
-All of that meant that the build process was done in less than a quarter, with a minimal amount of back-and-forth and QA tickets.
+All that meant that the build process was done in less than a quarter, with a minimal amount of back-and-forth and QA tickets.
 </CaseStudyChapter>
 
 
