Refine RBO case study

--- a/content/case_studies/room-booking-overview.mdx
+++ b/content/case_studies/room-booking-overview.mdx
@@ -21,25 +21,24 @@ src="/portfolio-assets/rbo-1.png"
 alt="Napkin sketch of the feature."
 >
 ## Starting with a Sketch
-This feature, like so many great ideas, started on the back of the proverbial napkin. In a sidebar during a conference meeting, one of our PMs quickly sketched the idea and asked another: “What can we do with this?”
-
-Not wanting to get ahead of ourselves, we decided to show the idea to key clients and potential users to define the scope and MVP functionality of the feature.
+Because we had a decent idea of what the solution would look like, it was tempting to move quickly to final designs. But rather than getting ahead of ourselves, we started with a pencil and paper, listing the core requirements and sketching out a rough idea of the interface.
 </CaseStudyChapter>
 
 <CaseStudyChapter
-src="/portfolio-assets/rbo-2.jpg"
-alt="A very rough wireframe of the feature."
+src="/portfolio-assets/rbo-2.mp4"
+video
+alt=""
 layout="reverse"
 >
 ## Vetting the Idea
-To make sure we designed the right thing, we started by working directly with relevant clients who had submitted related feature requests. Through a series of one-on-one research calls, I interviewed these clients and showed them an alpha version of the feature. To keep the focus on the idea itself, what I showed was totally removed from the the context of the OfficeSpace’s look and feel.
+In a series of one-on-one research calls with clients who had specifically requested this feature, I showed a wireframe prototype of the idea. This stage was crucial, as the feedback we gathered helped us triangulate 1) what unique value proposition we could offer, 2) what would be useful to our users, and 3) what existing solutions the feature would be competing with.
 
-This stage was crucial, as the feedback we gathered helped us triangulate 1) what unique value proposition we could offer, 2) what would be useful to our users, and 3) what existing solutions the feature would be competing with.
+In the end, these interviews helped us ruthlessly prioritize which aspects were required for MVP and which could be added in subsequent phases.
 </CaseStudyChapter>
 
 <CaseStudyCallout headline="Key takeaways from preliminary research">
-- Our assumption that only FMs would need access to this feature was wrong; many suggested that a new user role might need to be created.
-- Many found the color coding system we used to differentiate room capacity to be extremely intuitive—a good sign.
+- Even a basic, no-frills version of the feature would be useful to our users as a starting point. Features like reporting and coloring by capacity could be added later.
+- Moving meetings through drag-and-drop was found to be extremely intuitive, and would be our first priority after launching MVP.
 - Meeting privacy settings would need to be taken into consideration. Even seeing the title or the participants might be too sensitive.
 </CaseStudyCallout>
 
@@ -49,7 +48,7 @@ alt="A mockup of the feature in high fidelity. It resembles a Gantt-style calend
 layout="vertical"
 >
 ## Taking it to High Fidelity
-Armed with knowledge and a better idea of the scope of the MVP, I now felt comfortable creating high-fidelity designs in our design system. This interface was unlike any other in our product and required introducing new patterns; I borrowed ideas from similar experiences in other products, wanting our users to feel a sense of familiarity.
+Armed with knowledge and a finalized MVP scope, I now felt comfortable creating high-fidelity designs. Some aspects could utilize existing components from our design system, but there were some interactions, such as the grid layout and timeline scrubber, that were unique to this page. For these new patterns, I borrowed from similar experiences in other products like project management software and even video editing tools.
 </CaseStudyChapter>
 
 <CaseStudyChapter
