Revise latest blog post

--- a/content/blog_posts/design-principles.mdx
+++ b/content/blog_posts/design-principles.mdx
@@ -5,9 +5,7 @@ description: "A look at how we created our design principles at OfficeSpace that
 thumbnailUrl: "/post-assets/og-principles.jpg"
 ---
 
-When I joined OfficeSpace Software in 2021, the design practice was in a sort of paradoxical state: long-tenured, yet lacking maturity. The design language used in the product was the solo effort of one of the original founders. As you’d expect from a bootstrapped startup, it evolved without strict governance, adapting to each new feature and leaving a trail of UI and tech debt in its wake. No judgement here—that’s exactly how a lean, early-stage SaaS company should operate.
-
-But I joined at a time when the product was reaching an adolescence and our design team was growing. We had created a design system, built a new front-end framework, and started introducing more documentation and (gasp) bureaucracy to our process, all necessary to keep our things running efficiently with more people on board.
+When I joined OfficeSpace Software in 2021, it was at a time when the design practice encountering some growing pains. The design language used in the product was the solo effort of one of the original founders, and as you’d expect from a bootstrapped startup, it had evolved without strict governance, adapting to each new feature and leaving a trail of UI and tech debt in its wake. But I was onboarded at a time when the product was reaching an adolescence and our design team was expanding. We created a design system, built a new front-end framework, and started introducing more documentation and (gasp) bureaucracy to our process, all necessary to keep our things running efficiently with more people on board.
 
 Eventually, we reached a stage where we felt we needed a set of design principles to guide our decision making. I want to share my opinions on what makes for good design principles and the approach we took to develop ours at OfficeSpace.
 
