Fix background color issue on portfolio

--- a/content/case_studies/room-booking-overview.mdx
+++ b/content/case_studies/room-booking-overview.mdx
@@ -66,7 +66,7 @@ All that meant that the build process was done in less than a quarter, with a mi
 
 
 
-<div className="max-w-3xl mx-auto my-12 bg-amber-400 lg:my-48">
+<div className="max-w-3xl mx-auto my-12 lg:my-48">
 ## Results
 <CaseStudyBlockquote
     quotation="Ding ding ding!"
