--- a/content/blog_posts/design-principles.mdx
+++ b/content/blog_posts/design-principles.mdx
@@ -36,7 +36,7 @@ On their own, these principles suffer from some of the pitfalls I mentioned earl
 So I created the following table:
 
 <div className="max-w-full md:max-w-none lg:w-[896px] xl:w-[1152px] 2xl:w-[1280px] overflow-auto my-12">
-<table className="table-fixed" className="not-prose text-base leading-tight w-[1400px] max-w-7xl border-separate border-spacing-[1px] bg-neutral-200 dark:bg-neutral-700">
+<table className="table-fixed" className="not-prose text-base leading-tight w-[1400px] max-w-7xl border-separate border-spacing-px bg-neutral-200 dark:bg-neutral-700">
     <thead className="bg-neutral-100 dark:bg-neutral-800">
         <tr>
             <th className="font-degular p-3 font-semibold text-sm leading-tight text-left w-1/5">What risk do we need to mitigate?</th>
