Code cleanup after tailwind migration

--- a/content/blog_posts/design-principles.mdx
+++ b/content/blog_posts/design-principles.mdx
@@ -39,10 +39,10 @@ So I created the following table:
 <table className="table-fixed" className="not-prose text-base leading-tight w-[1400px] max-w-7xl border-separate border-spacing-px bg-neutral-200 dark:bg-neutral-700">
     <thead className="bg-neutral-100 dark:bg-neutral-800">
         <tr>
-            <th className="font-degular p-3 font-semibold text-sm leading-tight text-left w-1/5">What risk do we need to mitigate?</th>
-            <th className="font-degular p-3 font-semibold text-sm leading-tight text-left w-1/5">What principle helps us do that?</th>
-            <th className="font-degular p-3 font-semibold text-sm leading-tight text-left w-2/5">How do we employ this principle?</th>
-            <th className="font-degular p-3 font-semibold text-sm leading-tight text-left w-1/5">What’s the outcome of this principle?</th>
+            <th className="font-display p-3 font-semibold text-sm leading-tight text-left w-1/5">What risk do we need to mitigate?</th>
+            <th className="font-display p-3 font-semibold text-sm leading-tight text-left w-1/5">What principle helps us do that?</th>
+            <th className="font-display p-3 font-semibold text-sm leading-tight text-left w-2/5">How do we employ this principle?</th>
+            <th className="font-display p-3 font-semibold text-sm leading-tight text-left w-1/5">What’s the outcome of this principle?</th>
         </tr>
     </thead>
     <tbody className="bg-white dark:bg-neutral-900">
